# pusher-go-advanced

./: .gitignore  README.md
cli/: Cargo.toml  build-release.sh
cli/src/: api.rs  config.rs  main.rs
cli/src/commands/: auth.rs  mod.rs  portfolio.rs  report.rs  trigger.rs
deploy/: README.md  build_layer.sh  deploy.sh  deploy_scf.py  publish_layer.py  serverless.yml
docs/superpowers/plans/: 2026-06-25-pusher-go-advanced-01-db-schema.md  2026-06-25-pusher-go-advanced-02-auth-portfolio.md  2026-06-25-pusher-go-advanced-03-data-layer.md  2026-06-25-pusher-go-advanced-04-report-email.md  2026-06-25-pusher-go-advanced-05-pipeline-job.md  2026-06-25-pusher-go-advanced-06-rust-cli.md  2026-06-25-pusher-go-advanced-07-deploy.md
docs/superpowers/specs/: 2026-06-25-pusher-go-advanced-design.md
server/: requirements.txt  scf_bootstrap  scf_event_handler.py
server/app/: config.py  deps.py  main.py
server/app/agents/: agents.py  llm.py
server/app/api/: auth.py  job.py  portfolio.py  report.py  timer.py
server/app/auth/: security.py
server/app/data/: ak.py  (+8 more)
server/tests/: conftest.py  test_agents.py  test_auth_api.py  test_config.py  test_data_adapters.py  test_data_cache.py  test_data_models.py  test_data_provider.py  test_data_retry.py  test_data_rss.py  test_email.py  test_health.py  test_job_api.py  test_job_model.py  test_llm.py  test_market.py  test_mysql.py  test_pipeline.py  test_portfolio_api.py  test_portfolio_model.py  test_report_api.py  test_report_model.py  test_schema.py  test_security.py  test_timer_root.py  test_user_model.py
sql/: schema.sql
(+8 files in other folders)
