[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pusher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rpassword = "7"
dirs = "5"
anyhow = "1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
